# mlirbcc

./: .gitignore  BytecodeFormat.md  CMakeLists.txt  README.md  general.mlir  mlirbcc_architecture.md
examples/: CMakeLists.txt
examples/MlirBuilder/: Builder.cpp  CMakeLists.txt
examples/Printer/: BuiltinParse.c.inc  CMakeLists.txt  PrintParse.c
examples/Stub/: CMakeLists.txt  StubParse.c
include/mlirbcc/: BuiltinParse.c.inc  BuiltinParse.h  BytecodeTypes.h  DialectBytecodeReader.c.inc  Log.h  Parse.c.inc  Parse.h  Status.h
lib/: CMakeLists.txt
tblgen/: BuiltinInc.h  BytecodeAttrType.td  CMakeLists.txt  README.md  bc-tblgen.cpp  mlir-bc-tblgen.cpp
testdata/: README.md  blockargs.mlir  blockargs.mlirbc  blockargs_v6.mlirbc  general.mlir  general.mlirbc  general_v6.mlirbc  isolated_regions.mlirbc  resources.mlirbc  tosa_ops.mlirbc  version_test.mlir  version_test_v0.mlirbc  version_test_v1.mlirbc  version_test_v2.mlirbc  version_test_v3.mlirbc  version_test_v4.mlirbc  version_test_v5.mlirbc  version_test_v6.mlirbc
